# Manifold

./: .gitignore  .gitmodules  JOIN_THE_PRIVATE_ALPHA.md  MANIFOLD.md  MEMORY.md  README.md  data-detect-agent.py  pyproject.toml  solar-detect-agent.py
.openclaw/: workspace-state.json
agents/: argue-agent.py  braid-agent.py  btc-signals-agent.py  deploy-agent.py  infra-agent.py  manifold-agent.py  solar-sites-agent.py  stella-agent.py  wake-agent.py
bridge/: __init__.py  subway.py
contrib/: DEPLOYMENT.md
core/: __init__.py  atlas.py  blindspot.py  registry.py  store.py  substrate.py  topology.py  transition.py
data/: bootstrap-live.md  manifold.db  soul-live.md
docs/: CLEANUP.md  SECURITY_ARCHITECTURE.md  THEORY.md  VOID_LIFECYCLE.md  ci-setup.md  federation-design-proposal.md  index.html
examples/: atlas.py  basic.py  blind_spot.py  divergence.py  feedback_loop.py  fog.py  marketplace.py  persistence.py  semantic.py  sophia.py  teacup.py  two_agents.py  v070_primitives.py
federation/: .gitignore  AGENTS.md  CONTRIBUTING.md  JOINING.md  README.md  SPEC.md  config-hog.json  config-satelliteA.json  config-thefog.json  config.example.json  detection-ledger-hog.jsonl  detection-ledger-satelitea.jsonl  detection-ledger-satelliteA.jsonl  detection-ledger-thefog.jsonl  package-lock.json  package.json  reverse-proxy.mjs  runner-config-satelliteA.json  runner-config-thefog.json  runner-config.example.json  runner-config.json  runner.cjs  standalone.cjs  standalone.mts  start-hog.sh  start-runner.cjs  start-satelitea.sh  start-trillian.sh  tsconfig.json  (+1 more)
(+305 files in other folders)
