[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manifold-mesh"
version = "0.9.2"
description = "Cognitive mesh layer for AI agents — topology as epistemology"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["ai", "agents", "mesh", "networking", "p2p", "cognitive"]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "bridge*"]
exclude = ["tests*", "docs*", "scripts*", "examples*", "federation*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
